--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/medias-queries.css">
     <link rel="shortcut icon" href="img/list.ico" type="image/x-icon">
@@ -22,8 +23,8 @@
             <a href="/index.html">
                 <h2 id="title">To Do List</h2>
             </a>
-            <div id="time-location">
-                Time: <!---Time-->
+            <div id="local-time">
+                <span id="time">Loading...</span>
             </div>
         </div>
     </header>
@@ -122,6 +123,23 @@
     <footer>
         <div id="info-container">
             <div id="foot-container">
+                <div id="links">
+                    <a href="#" target="_blank" title="Portfolio">
+                        <i class="bi bi-card-checklist"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/ignacio-agustin-gonzalez-110768270/" target="_blank" title="Linkedin">
+                        <i class="bi bi-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/iggydc17?tab=repositories" target="_blank" title="GitHub Repository">
+                        <i class="bi bi-github"></i>
+                    </a>    
+                    <a href="#" target="_blank" title="CV">
+                        <i class="bi bi-file-person-fill"></i>
+                    </a>
+                    <a href="mailto:iggy.dc17@gmail.com" target="_blank" title="Email">
+                        <i class="bi bi-envelope"></i>
+                    </a>
+                </div>
                 <div id="techs">
                     <p>Technologies used:</p>
                     <ul class="tech-list">
@@ -136,34 +154,15 @@
                         </li>
                     </ul>
                 </div>
-                <div id="api">
-                    <p>Data obtained using API from: <a href="https://openweathermap.org/" target="_blank">Open Weather</a></p>
-                </div>
             </div>
-            <div id="links">
-                <a href="#" target="_blank" title="Portfolio">
-                    <i class="bi bi-card-checklist"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/ignacio-agustin-gonzalez-110768270/" target="_blank" title="Linkedin">
-                    <i class="bi bi-linkedin"></i>
-                </a>
-                <a href="https://github.com/iggydc17?tab=repositories" target="_blank" title="GitHub Repository">
-                    <i class="bi bi-github"></i>
-                </a>    
-                <a href="#" target="_blank" title="CV">
-                    <i class="bi bi-file-person-fill"></i>
-                </a>
-                <a href="mailto:iggy.dc17@gmail.com" target="_blank" title="Email">
-                    <i class="bi bi-envelope"></i>
-                </a>
-            </div>    
-        </div>
         <div id="copy">
             <p>Copyrighting &COPY; 2024 &nbsp; <a href="mailto:iggy.dc17@gmail.com" target="_blank">Ignacio Agustin González</a></p>
         </div>
     </footer>
 
     <script src="main.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </body>
 </html>
