Adding expired and active filters

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
                             <li><button id="all-button" class="dropdown-item" data-value="all-tasks">All Tasks</button></li>
                             <li><button id="none-button" class="dropdown-item" data-value="none-tasks">None Tasks</button></li>
                             <li><button id="done-button" class="dropdown-item" data-value="done">Done</button></li>
+                            <li><button id="active-button" class="dropdown-item" data-value="active">Active</button></li>
+                            <li><button id="expired-button" class="dropdown-item" data-value="expired">Expired</button></li>
                             <li><button id="in-progress-button" class="dropdown-item" data-value="in-progress">In Progress</button></li>
                             <li><button id="not-done-button" class="dropdown-item" data-value="not-done">Not Done</button></li>
                             <li><button id="hight-importance-button" class="dropdown-item" data-value="high-importance">Hight Importance</button></li>
@@ -96,12 +98,14 @@
                 <div id="sorted-by-container">
                     <div class="dropdown-filter">
                         <button id="sorted-by-button" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" title="Sort by">
-                            Sorted By <i class="bi bi-filter"></i>
+                            Sort By <i class="bi bi-filter"></i>
                         </button>
                         <ul class="dropdown-menu" id="dropdown-menu">
                             <li class="dropdown-item" data-value="Default">Default</li>
                             <li class="dropdown-item" data-value="A - Z">A - Z</li>
                             <li class="dropdown-item" data-value="Z - A">Z - A</li>
+                            <li class="dropdown-item" data-value="Active">Active</li>
+                            <li class="dropdown-item" data-value="Expired">Expired</li>
                             <li class="dropdown-item" data-value="Status ↑ ↓">Status ↑ ↓</li>
                             <li class="dropdown-item" data-value="Status ↓ ↑">Status ↓ ↑</li>
                             <li class="dropdown-item" data-value="Importance ↑ ↓">Importance ↑ ↓</li>
