--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <input type="text" id="add-task-input" placeholder="Add a new Task" maxlength="38">    
                 </div>
                 <div id="quick-inputs-container">
-                    <div>
+                    <div id="select-importance-box">
                         <label for="importance-select-option" id="importance-label" class="label">Importance</label>
                         <select id="importance-select-option">
                             <option value="High" selected>High</option>
@@ -45,7 +45,7 @@
                             <option value="Low">Low</option>
                         </select>    
                     </div>
-                    <div>
+                    <div id="select-status-box">
                         <label for="status-select-option" id="status-label" class="label">Status</label>
                         <select id="status-select-option">
                             <option value="Done">Done</option>
@@ -53,7 +53,7 @@
                             <option value="Unfinished" selected>Unfinished</option>
                         </select>    
                     </div>
-                    <div>
+                    <div id="select-finish-date-box">
                         <label for="finish-date">Finish Date </label>
                         <input type="date" id="finish-date" title="Show calendar">    
                     </div>
