--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </form>
         
             <form id="search-form-container">
-                <input type="search" id="search-bar" placeholder="Search by task name, importance or status">
+                <input type="search" id="search-bar" placeholder="Search by task">
                 <button type="submit" id="search-button" title="Search"><i class="bi bi-search"></i></button>
                 <div id="total-search-results">
                     <p id="total-search-result-number" style="display: none;"></p>
